0.1701
    - added EXPERIMENTAL DBIx::Custom::Result header method
    - added EXPERIMENTAL last_sql attribute method
0.1700
    - fixed end_filter DEPRECATED warnings bug
0.1699
    - added tag_parse attribute.
    - added EXPERIMENTAL order method
    - added EXPERIMENTAL DBIx::Custom::Order module
    - changed backword compatible policy
      ------------------------------------------------------------------------
      If a functionality is DEPRECATED, you can know it by DEPRECATED warnings
      except for attribute method.
      You can check all DEPRECATED functionalities by document.
      DEPRECATED functionality is removed after five years,
      but if at least one person use the functionality and tell me that thing
      I extend one year each time you tell me it.

      EXPERIMENTAL functionality will be changed without warnings.
      ------------------------------------------------------------------------
0.1698
    - fixed DBIx::Custom::Where to_string method small bug
    - added EXPERIMENTAL execute method table_alias option
0.1697
    - added EXPERIMENTAL map_param method
0.1696
    - added new argument format update, delete, select method where option
    - create_query is DEPRECATED! use query option of each method instead.
    - added EXPERIMENTAL insert, update, and select method prefix option
    - fixed small insert, update, delete, select method id option bug
0.1695
    - changed EXPERIMENTAL DBIx::Custom::Result type_rule_off method argument
    - added EXPERIMENTAL DBIx::Custom::Result type_rule_on method
    - changed EXPERIMENTAL DBIx::Custom::Result type_rule1_off method argument
    - added EXPERIMENTAL DBIx::Custom::Result type_rule1_on method
    - changed EXPERIMENTAL DBIx::Custom::Result type_rule2_off method argument
    - added EXPERIMENTAL DBIx::Custom::Result type_rule2_on method
    - changed EXPERIMENTAL DBIx::Custom::Result filter_off method argument
    - added EXPERIMENTAL DBIx::Custom::Result filter_on method
0.1694